package project;

/**
 * Basic enum to hold the scheduler state.
 *
 */
public enum SchedulerState {
	PROCESSING, RECEIVING, SLEEPING
}
